Update alert details page to prevent invisible labels on light mode

--- a/src/app/pages/alert-details/alert-details.page.scss
+++ b/src/app/pages/alert-details/alert-details.page.scss
@@ -7,8 +7,14 @@
 .report-item__label {
   font-weight: bold;
   font-size: 1rem;
-  color: white;
   width: 30%;
+  color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+  .report-item__label {
+    color: white;
+  }
 }
 
 .report-item__content {
